VPC4.template
{
	 "AWSTemplateFormatVersion" : "2010-09-09",
	"Description": "This Template will create VPC, Subnet and resources needed for VPC  ",
	"Parameters": {
		"TagValue1": {
			"Description": "The Project Name",
			"Type": "String"
		},
		"TagValue2": {
			"Description": "The Name of Environment",
			"Type": "String",
			"AllowedValues": [
				"Development",
				"Staging",
				"Production"
			]
		},
		"CIDR": {
			"Description": "The IP address range that you'll use for your VPC",
			"Type": "String"
		},
		"PublicCidrBlock1": {
			"Description": "The IP address range for Public Subnet 1",
			"Type": "String"
		},
		"PublicSubnet1AZ": {
			"Description": "The AZ for Public Subnet 1",
			"Type": "AWS::EC2::AvailabilityZone::Name"
		},
		"PublicCidrBlock2": {
			"Description": "The IP address range for Public Subnet 2",
			"Type": "String"
		},
		"PublicSubnet2AZ": {
			"Description": "The AZ for Public Subnet 2",
			"Type": "AWS::EC2::AvailabilityZone::Name"
		},
		"PublicCidrBlock3": {
			"Description": "The IP address range for Public Subnet 1",
			"Type": "String"
		},
		"PublicSubnet3AZ": {
			"Description": "The AZ for Public Subnet 1",
			"Type": "AWS::EC2::AvailabilityZone::Name"
		},
		"PublicCidrBlock4": {
			"Description": "The IP address range for Public Subnet 1",
			"Type": "String"
		},
		"PublicSubnet4AZ": {
			"Description": "The AZ for Public Subnet 1",
			"Type": "AWS::EC2::AvailabilityZone::Name"
		},
		"PrivateCidrBlock1": {
			"Description": "The IP address range for Private Subnet 1",
			"Type": "String"
		},
		"PrivateSubnet1AZ": {
			"Description": "The AZ for Private Subnet 1",
			"Type": "AWS::EC2::AvailabilityZone::Name"
		},
		"PrivateCidrBlock2": {
			"Description": "The IP address range for Private Subnet 2",
			"Type": "String"
		},
		"PrivateSubnet2AZ": {
			"Description": "The AZ Private Subnet 2",
			"Type": "AWS::EC2::AvailabilityZone::Name"
		},
		"PrivateCidrBlock3": {
			"Description": "The IP address range for Private Subnet 1",
			"Type": "String"
		},
		"PrivateSubnet3AZ": {
			"Description": "The AZ for Private Subnet 1",
			"Type": "AWS::EC2::AvailabilityZone::Name"
		},
		"PrivateCidrBlock4": {
			"Description": "The IP address range for Private Subnet 1",
			"Type": "String"
		},
		"PrivateSubnet4AZ": {
			"Description": "The AZ for Private Subnet 1",
			"Type": "AWS::EC2::AvailabilityZone::Name"
		}
	},
	"Resources": {
		"VPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": {
					"Ref": "CIDR"
				},
				"EnableDnsSupport": "true",
				"EnableDnsHostnames": "true",
				"InstanceTenancy": "default",
				"Tags": [{
					"Key": "Project",
					"Value": {
						"Ref": "TagValue1"
					}
				}, {
					"Key": "Environment",
					"Value": {
						"Ref": "TagValue2"
					}
				}]
			}
		},
		"PublicSubnet1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "PublicCidrBlock1"
				},
				"MapPublicIpOnLaunch": "true",
				"AvailabilityZone": {
					"Ref": "PublicSubnet1AZ"
				},
				"Tags": [{
					"Key": "Project",
					"Value": {
						"Ref": "TagValue1"
					}
				}, {
					"Key": "Environment",
					"Value": {
						"Ref": "TagValue2"
					}
				}]
			}
		},
		"PublicSubnet2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "PublicCidrBlock2"
				},
				"MapPublicIpOnLaunch": "true",
				"AvailabilityZone": {
					"Ref": "PublicSubnet2AZ"
				},
				"Tags": [{
					"Key": "Project",
					"Value": {
						"Ref": "TagValue1"
					}
				}, {
					"Key": "Environment",
					"Value": {
						"Ref": "TagValue2"
					}
				}]
			}
		},
		"PublicSubnet3": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "PublicCidrBlock3"
				},
				"MapPublicIpOnLaunch": "true",
				"AvailabilityZone": {
					"Ref": "PublicSubnet3AZ"
				},
				"Tags": [{
					"Key": "Project",
					"Value": {
						"Ref": "TagValue1"
					}
				}, {
					"Key": "Environment",
					"Value": {
						"Ref": "TagValue2"
					}
				}]
			}
		},
		"PublicSubnet4": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "PublicCidrBlock4"
				},
				"MapPublicIpOnLaunch": "true",
				"AvailabilityZone": {
					"Ref": "PublicSubnet4AZ"
				},
				"Tags": [{
					"Key": "Project",
					"Value": {
						"Ref": "TagValue1"
					}
				}, {
					"Key": "Environment",
					"Value": {
						"Ref": "TagValue2"
					}
				}]
			}
		},
		"InternetGateway": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [{
					"Key": "Project",
					"Value": {
						"Ref": "TagValue1"
					}
				}, {
					"Key": "Environment",
					"Value": {
						"Ref": "TagValue2"
					}
				}]
			}
		},
		"AttachGateway": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"InternetGatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"NAT": {
			"DependsOn": "AttachGateway",
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": [
						"EIP",
						"AllocationId"
					]
				},
				"SubnetId": {
					"Ref": "PublicSubnet1"
				}
			}
		},
		"EIP": {
			"Type": "AWS::EC2::EIP",
			"Properties": {
				"Domain": "vpc"
			}
		},
		"PublicRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Project",
					"Value": {
						"Ref": "TagValue1"
					}
				}, {
					"Key": "Environment",
					"Value": {
						"Ref": "TagValue2"
					}
				}, {
					"Key": "Network",
					"Value": "Public"
				}]
			}
		},
		"PublicRoute": {
			"Type": "AWS::EC2::Route",
			"DependsOn": "AttachGateway",
			"Properties": {
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"PublicSubnetRouteTableAssociation1": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet1"
				},
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				}
			}
		},
		"PublicSubnetRouteTableAssociation2": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet2"
				},
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				}
			}
		},
		"PublicSubnetRouteTableAssociation3": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet3"
				},
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				}
			}
		},
		"PublicSubnetRouteTableAssociation4": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet4"
				},
				"RouteTableId": {
					"Ref": "PublicRouteTable"
				}
			}
		},
		"PublicNetworkAcl": {
			"Type": "AWS::EC2::NetworkAcl",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Project",
					"Value": {
						"Ref": "TagValue1"
					}
				}, {
					"Key": "Environment",
					"Value": {
						"Ref": "TagValue2"
					}
				}, {
					"Key": "Network",
					"Value": "Public"
				}]
			}
		},
		"PublicSubnetNetworkAclAssociation1": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet1"
				},
				"NetworkAclId": {
					"Ref": "PublicNetworkAcl"
				}
			}
		},
		"PublicSubnetNetworkAclAssociation2": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet2"
				},
				"NetworkAclId": {
					"Ref": "PublicNetworkAcl"
				}
			}
		},
		"PublicSubnetNetworkAclAssociation3": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet3"
				},
				"NetworkAclId": {
					"Ref": "PublicNetworkAcl"
				}
			}
		},
				"PublicSubnetNetworkAclAssociation4": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet4"
				},
				"NetworkAclId": {
					"Ref": "PublicNetworkAcl"
				}
			}
		},
		"PrivateSubnet1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "PrivateCidrBlock1"
				},
				"AvailabilityZone": {
					"Ref": "PrivateSubnet1AZ"
				},
				"Tags": [{
					"Key": "Project",
					"Value": {
						"Ref": "TagValue1"
					}
				}, {
					"Key": "Environment",
					"Value": {
						"Ref": "TagValue2"
					}
				}]
			}
		},
		"PrivateSubnet2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "PrivateCidrBlock2"
				},
				"AvailabilityZone": {
					"Ref": "PrivateSubnet2AZ"
				},
				"Tags": [{
					"Key": "Project",
					"Value": {
						"Ref": "TagValue1"
					}
				}, {
					"Key": "Environment",
					"Value": {
						"Ref": "TagValue2"
					}
				}]
			}
		},
		"PrivateSubnet3": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "PrivateCidrBlock3"
				},
				"AvailabilityZone": {
					"Ref": "PrivateSubnet1AZ"
				},
				"Tags": [{
					"Key": "Project",
					"Value": {
						"Ref": "TagValue1"
					}
				}, {
					"Key": "Environment",
					"Value": {
						"Ref": "TagValue2"
					}
				}]
			}
		},
		"PrivateSubnet4": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "PrivateCidrBlock4"
				},
				"AvailabilityZone": {
					"Ref": "PrivateSubnet1AZ"
				},
				"Tags": [{
					"Key": "Project",
					"Value": {
						"Ref": "TagValue1"
					}
				}, {
					"Key": "Environment",
					"Value": {
						"Ref": "TagValue2"
					}
				}]
			}
		},
		"PrivateRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Project",
					"Value": {
						"Ref": "TagValue1"
					}
				}, {
					"Key": "Environment",
					"Value": {
						"Ref": "TagValue2"
					}
				}, {
					"Key": "Network",
					"Value": "Private"
				}]
			}
		},
		"PrivateSubnetRouteTableAssociation1": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PrivateSubnet1"
				},
				"RouteTableId": {
					"Ref": "PrivateRouteTable"
				}
			}
		},
		"PrivateSubnetRouteTableAssociation2": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PrivateSubnet2"
				},
				"RouteTableId": {
					"Ref": "PrivateRouteTable"
				}
			}
		},
		"PrivateSubnetRouteTableAssociation3": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PrivateSubnet3"
				},
				"RouteTableId": {
					"Ref": "PrivateRouteTable"
				}
			}
		},
		"PrivateSubnetRouteTableAssociation4": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PrivateSubnet4"
				},
				"RouteTableId": {
					"Ref": "PrivateRouteTable"
				}
			}
		},
		"PrivateNATRouteTableAssociation": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "PrivateRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NAT"
				}
			}
		},
		"PrivateNetworkAcl": {
			"Type": "AWS::EC2::NetworkAcl",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Project",
					"Value": {
						"Ref": "TagValue1"
					}
				}, {
					"Key": "Environment",
					"Value": {
						"Ref": "TagValue2"
					}
				}, {
					"Key": "Network",
					"Value": "Private"
				}]
			}
		},
		"PrivateSubnetNetworkAclAssociation1": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PrivateSubnet1"
				},
				"NetworkAclId": {
					"Ref": "PrivateNetworkAcl"
				}
			}
		},
		"PrivateSubnetNetworkAclAssociation2": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PrivateSubnet2"
				},
				"NetworkAclId": {
					"Ref": "PrivateNetworkAcl"
				}
			}
		},
		"PrivateSubnetNetworkAclAssociation3": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PrivateSubnet3"
				},
				"NetworkAclId": {
					"Ref": "PrivateNetworkAcl"
				}
			}
		},
		"PrivateSubnetNetworkAclAssociation4": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PrivateSubnet4"
				},
				"NetworkAclId": {
					"Ref": "PrivateNetworkAcl"
				}
			}
		},
		"NetworkAclEntry1": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"CidrBlock": "0.0.0.0/0",
				"Egress": "true",
				"Protocol": "-1",
				"RuleAction": "allow",
				"RuleNumber": "100",
				"NetworkAclId": {
					"Ref": "PublicNetworkAcl"
				}
			}
		},
		"NetworkAclEntry2": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"CidrBlock": "0.0.0.0/0",
				"Protocol": "-1",
				"RuleAction": "allow",
				"RuleNumber": "100",
				"NetworkAclId": {
					"Ref": "PublicNetworkAcl"
				}
			}
		},
		"NetworkAclEntry3": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"CidrBlock": "0.0.0.0/0",
				"Egress": "true",
				"Protocol": "-1",
				"RuleAction": "allow",
				"RuleNumber": "100",
				"NetworkAclId": {
					"Ref": "PublicNetworkAcl"
				}
			}
		},
		"NetworkAclEntry4": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"CidrBlock": "0.0.0.0/0",
				"Egress": "true",
				"Protocol": "-1",
				"RuleAction": "allow",
				"RuleNumber": "100",
				"NetworkAclId": {
					"Ref": "PublicNetworkAcl"
				}
			}
		},
		"NetworkAclEntry5": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"CidrBlock": "0.0.0.0/0",
				"Egress": "true",
				"Protocol": "-1",
				"RuleAction": "allow",
				"RuleNumber": "100",
				"NetworkAclId": {
					"Ref": "PrivateNetworkAcl"
				}
			}
		},
		"NetworkAclEntry6": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"CidrBlock": "0.0.0.0/0",
				"Protocol": "-1",
				"RuleAction": "allow",
				"RuleNumber": "100",
				"NetworkAclId": {
					"Ref": "PrivateNetworkAcl"
				}
			}
		},
	
	"NetworkAclEntry7": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"CidrBlock": "0.0.0.0/0",
				"Protocol": "-1",
				"RuleAction": "allow",
				"RuleNumber": "100",
				"NetworkAclId": {
					"Ref": "PrivateNetworkAcl"
				}
			}
		},
	
	"NetworkAclEntry8": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"CidrBlock": "0.0.0.0/0",
				"Protocol": "-1",
				"RuleAction": "allow",
				"RuleNumber": "100",
				"NetworkAclId": {
					"Ref": "PrivateNetworkAcl"
				}
			}
		}
	},
	"Outputs": {
		"VPCId": {
			"Description": "VPC ID of the newly created VPC",
			"Value": {
				"Ref": "VPC"
			}
		},
		"PublicSubnet1Id": {
			"Description": "SubnetId of the public subnet",
			"Value": {
				"Ref": "PublicSubnet1"
			}
		},
		"PublicSubnet2Id": {
			"Description": "SubnetId of the public subnet",
			"Value": {
				"Ref": "PublicSubnet2"
			}
		},
		"PublicSubnet3Id": {
			"Description": "SubnetId of the public subnet",
			"Value": {
				"Ref": "PublicSubnet3"
			}
		},
		"PublicSubnet4Id": {
			"Description": "SubnetId of the public subnet",
			"Value": {
				"Ref": "PublicSubnet4"
			}
		},
		"PrivateSubnet1Id": {
			"Description": "SubnetId of the private subnet",
			"Value": {
				"Ref": "PrivateSubnet1"
			}
		},
		"PrivateSubnet2Id": {
			"Description": "SubnetId of the private subnet",
			"Value": {
				"Ref": "PrivateSubnet2"
			}
		},
		"PrivateSubnet3Id": {
			"Description": "SubnetId of the private subnet",
			"Value": {
				"Ref": "PrivateSubnet3"
			}
		},
		"PrivateSubnet4Id": {
			"Description": "SubnetId of the private subnet",
			"Value": {
				"Ref": "PrivateSubnet4"
			}
		}
	}
}
